# projet-fake-news

./: .env  .gitignore  Ci.yml  Dockerfile  README.md  bluesky_posts_all.json  charger_mongoDB.py  docker-compose.yaml  docker-compose.yml  login.py  recolte_posts.py  recolte_posts_all.py  recolte_posts_whats_hot.py  requirements-airflow.txt  requirements.txt  token.json
dags/: bluesky_collect_dag.py  pipelin_bluesky.py  thumalien_pipeline_dag.py
facts-check/conf/base/: catalog.yml  parameters.yml
facts-check/src/facts_check/: __init__.py  __main__.py  pipeline_registry.py  settings.py
facts-check/src/facts_check/pipelines/preprocessing/: nodes.py
facts-check/src/facts_check/pipelines/tfidf_vectorization/: nodes.py  pipeline.py
facts-check/src/facts_check/pipelines/vectorization/: nodes.py  pipeline.py
kedro/facts_check/: README.md  pyproject.toml  requirements.txt
kedro/facts_check/conf/base/: catalog.yml  parameters.yml
kedro/facts_check/src/facts_check/: pipeline_registry.py  settings.py
kedro/facts_check/src/facts_check/pipelines/preprocessing/: nodes.py
kedro/facts_check/src/facts_check/pipelines/tfidf_vectorization/: nodes.py
projet_etude_bluesky/: .gitignore  README.md  docker-compose.yml  requirements-airflow.txt
projet_etude_bluesky/dags/: thumalien_pipeline_dag.py
projet_etude_bluesky/kedro/facts_check/: requirements.txt
projet_etude_bluesky/scripts/: collect_posts.py  diagnose_model.py  explain_post.py  login.py
projet_etude_bluesky/streamlit_app/: app.py  requirements.txt
scripts/: collect_posts.py  login.py  recolte_posts.py
(+17 files in other folders)
