[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "facts_check"
readme = "README.md"
dynamic = [
    "version",
]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=1.1.1",
]

[project.scripts]
facts-check = "facts_check.__main__:main"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "facts_check.__version__"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.kedro]
package_name = "facts_check"
project_name = "facts_check"
kedro_init_version = "1.1.1"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[tool.kedro_telemetry]
project_id = "1767000bff914e89b173347212088574"
